fixed a few issues following sprint 2 feedback. 1 - added handler for cancel button on upload page. 2 - changed scrollbar for comments section to not include the form. Added box shadow to buttons for improved UX, added icon for Cancel button on upload page

--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -6,9 +6,6 @@
 .comments {
     background-color: $white;
     padding: 1.5rem 1rem 1.5rem 1rem; 
-    overflow: auto;
-    height: 650px;
-    // comments section will add vertical scroll if => 600px in height
 
     @include tablet {
         padding: 1rem 2.25rem 1.5rem 2.25rem;
@@ -37,6 +34,14 @@
         padding-top: 2rem;
         @include font-subheader;
     }
+}
+
+.old-comments-container{
+
+    // comments section will add vertical scroll if => 600px in height
+    height: 600px;
+    overflow: auto;
+
 }
 
 .old-comments {
