--- a/src/components/CommentsForm/CommentsForm.scss
+++ b/src/components/CommentsForm/CommentsForm.scss
@@ -122,6 +122,7 @@
 
         &:hover {
             background-color: $brainflix-darkblue;
+            box-shadow: 5px 5px 5px $mercury;
         }
 
         &-img {
