--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -148,6 +148,7 @@
 
         &:hover {
             background-color: $brainflix-darkblue;
+            box-shadow: 5px 5px 5px $mercury;
         }
 
         &-img {
